src/snapshots/smithereens__parser__tests__lateral_chain-3.snap
---
source: src/parser.rs
assertion_line: 265
expression: "lateral_chain(\"[AG]\")?"
---
(
    "",
    [
        (
            'A',
            None,
        ),
        (
            'G',
            None,
        ),
    ],
)
