src/snapshots/smithereens__parser__tests__lateral_chain-4.snap
---
source: src/parser.rs
assertion_line: 267
expression: "lateral_chain(\"[AG(-Ac)]\")?"
---
(
    "",
    [
        (
            'A',
            None,
        ),
        (
            'G',
            Some(
                [
                    Remove(
                        "Ac",
                    ),
                ],
            ),
        ),
    ],
)
