src/snapshots/smithereens__parser__tests__lateral_chain-5.snap
---
source: src/parser.rs
assertion_line: 278
expression: "lateral_chain(\"[A(+Am)G(-Ac)]\")?"
---
(
    "",
    [
        (
            'A',
            Some(
                [
                    Add(
                        "Am",
                    ),
                ],
            ),
        ),
        (
            'G',
            Some(
                [
                    Remove(
                        "Ac",
                    ),
                ],
            ),
        ),
    ],
)
