src/snapshots/smithereens__parser__tests__lateral_chain-6.snap
---
source: src/parser.rs
assertion_line: 289
expression: "lateral_chain(\"[AG(-Ac,+Am)]\")?"
---
(
    "",
    [
        (
            'A',
            None,
        ),
        (
            'G',
            Some(
                [
                    Remove(
                        "Ac",
                    ),
                    Add(
                        "Am",
                    ),
                ],
            ),
        ),
    ],
)
