src/snapshots/smithereens__parser__tests__lateral_chain.snap
---
source: src/parser.rs
assertion_line: 261
expression: "lateral_chain(\"[A]\")?"
---
(
    "",
    [
        (
            'A',
            None,
        ),
    ],
)
