src/snapshots/smithereens__parser__tests__modifications-2.snap
---
source: src/parser.rs
assertion_line: 224
expression: "modifications(\"(-Ac)\")?"
---
(
    "",
    [
        Remove(
            "Ac",
        ),
    ],
)
