src/snapshots/smithereens__parser__tests__modifications-3.snap
---
source: src/parser.rs
assertion_line: 229
expression: "modifications(\"(+Ac,+Am)\")?"
---
(
    "",
    [
        Add(
            "Ac",
        ),
        Add(
            "Am",
        ),
    ],
)
