src/snapshots/smithereens__parser__tests__modifications-4.snap
---
source: src/parser.rs
assertion_line: 240
expression: "modifications(\"(+Ac,-Am,+OH)\")?"
---
(
    "",
    [
        Add(
            "Ac",
        ),
        Remove(
            "Am",
        ),
        Add(
            "OH",
        ),
    ],
)
