src/snapshots/smithereens__parser__tests__modifications.snap
---
source: src/parser.rs
assertion_line: 219
expression: "modifications(\"(+Ac)\")?"
---
(
    "",
    [
        Add(
            "Ac",
        ),
    ],
)
