src/snapshots/smithereens__parser__tests__monomer-2.snap
---
source: src/parser.rs
assertion_line: 190
expression: "monomer(\"gm-AEJA\")?"
---
(
    "",
    (
        [
            (
                'g',
                None,
            ),
            (
                'm',
                None,
            ),
        ],
        Some(
            [
                (
                    'A',
                    None,
                    None,
                ),
                (
                    'E',
                    None,
                    None,
                ),
                (
                    'J',
                    None,
                    None,
                ),
                (
                    'A',
                    None,
                    None,
                ),
            ],
        ),
    ),
)
