src/snapshots/smithereens__parser__tests__monomer-3.snap
---
source: src/parser.rs
assertion_line: 206
expression: "monomer(\"m-AEJA\")?"
---
(
    "",
    (
        [
            (
                'm',
                None,
            ),
        ],
        Some(
            [
                (
                    'A',
                    None,
                    None,
                ),
                (
                    'E',
                    None,
                    None,
                ),
                (
                    'J',
                    None,
                    None,
                ),
                (
                    'A',
                    None,
                    None,
                ),
            ],
        ),
    ),
)
