src/snapshots/smithereens__parser__tests__monomer-4.snap
---
source: src/parser.rs
assertion_line: 222
expression: "monomer(\"gm-AE(+Am)JA\")?"
---
(
    "",
    (
        [
            (
                'g',
                None,
            ),
            (
                'm',
                None,
            ),
        ],
        Some(
            [
                (
                    'A',
                    None,
                    None,
                ),
                (
                    'E',
                    Some(
                        [
                            Add(
                                "Am",
                            ),
                        ],
                    ),
                    None,
                ),
                (
                    'J',
                    None,
                    None,
                ),
                (
                    'A',
                    None,
                    None,
                ),
            ],
        ),
    ),
)
